feature/landing-page - Design landing page

--- a/src/assets/styles/base/base.less
+++ b/src/assets/styles/base/base.less
@@ -1,4 +1,8 @@
 
+.flex{
+  display: flex;
+}
+
 .flex_space_between {
   display: flex;
   justify-content: space-between;
@@ -27,6 +31,10 @@
   align-items: center;
 }
 
+.inner_padding {
+  padding: 16px 24px;
+}
+
 .pr-4 {
   padding-right: 4px;
 }
@@ -40,7 +48,7 @@
 }
 
 .pb-4 {
-  padding-botton: 4px;
+  padding-bottom: 4px;
 }
 
 .pr-8 {
@@ -56,6 +64,22 @@
 }
 
 .pb-8 {
-  padding-botton: 8px;
+  padding-bottom: 8px;
+}
+
+.mr-24 {
+  margin-right: 24px;
+}
+
+.ml-24 {
+  margin-left: 24px;
+}
+
+.mt-24 {
+  margin-top: 24px;
+}
+
+.mb-24 {
+  margin-bottom: 24px;
 }
 
